@@ -4590,4 +4590,6 @@ B)x/alt_verbnames,mark
 /(aa)(BB)/substitute_extended,replace=\U$1\L$2\E$1..\U$1\l$2$1
     aaBB
 
+/^(o(\1{72}{\"{\\{00000059079}\d*){74}}){19}/I
+
 # End of testinput2 
